EXTRA_DIST = qdbusabstractadaptor.h \
             qdbusabstractadaptor_p.h \
             qdbusabstractinterface.h \
             qdbusabstractinterface_p.h \
             qdbusbus.h \
             qdbusconnection.h \
             qdbusconnection_p.h \
             qdbuserror.h \
             qdbus.h \
             qdbusinterface.h \
             qdbusinterface_p.h \
             qdbusintrospection_p.h \
             qdbusmacros.h \
             qdbusmarshall_p.h \
             qdbusmessage.h \
             qdbusmessage_p.h \
             qdbusmetaobject_p.h \
             qdbusreply.h \
             qdbusserver.h \
             qdbustypehelper_p.h \
             qdbustype_p.h \
             qdbusutil.h \
             qdbusxmlparser_p.h
